--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="default_language">en</string>
     <string name="html_format"><![CDATA[%1$s]]></string>
-    <string-array name="donation_amounts">
+    <string-array name="donation_amount">
         <item>10 MXN</item>
         <item>20 MXN</item>
         <item>50 MXN</item>
@@ -11,17 +11,17 @@
         <item>500 MXN</item>
         <item>1000 MXN</item>
     </string-array>
-    <string-array name="fortune_teller_aspects">
+    <string-array name="fortune_teller_aspect_value">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>
-    <string-array name="languages">
+    <string-array name="language_value">
         <item>en</item>
         <item>es</item>
     </string-array>
-    <string-array name="numbers">
+    <string-array name="zodiac_number">
         <item>\?</item>
         <item>7, 14, 20</item>
         <item>11, 5, 19</item>
@@ -36,7 +36,7 @@
         <item>9, 14, 23</item>
         <item>3, 16, 25</item>
     </string-array>
-    <string-array name="refresh_time_values">
+    <string-array name="refresh_time_value">
         <item>0</item>
         <item>5</item>
         <item>10</item>
@@ -46,7 +46,7 @@
         <item>60</item>
         <item>120</item>
     </string-array>
-    <string-array name="sound_names">
+    <string-array name="sound_name">
         <item>blip1</item>
         <item>blip2</item>
         <item>bum</item>
@@ -57,18 +57,18 @@
         <item>notification_sound</item>
         <item>water_drop</item>
     </string-array>
-    <string-array name="text_type_values">
+    <string-array name="text_type_value">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
-    <string-array name="theme_values">
+    <string-array name="theme_value">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>
-    <string-array name="update_time_values">
+    <string-array name="update_time_value">
         <item>60</item>
         <item>120</item>
         <item>300</item>
